# agent-mcp

./: README.md  mcp-servers.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: quality.yaml
docs/: skills-vs-mcp.md
servers/datakit/: .gitignore  README.md  pyproject.toml
servers/datakit/src/datakit/: __init__.py  __main__.py  core.py  server.py
servers/datakit/tests/: test_core.py  test_server.py
